--- a/CSS.css
+++ b/CSS.css
@@ -1,8 +1,10 @@
 body{
-    background-image: linear-gradient(to left, #141e30, #243b55);  /* Chrome 10-25, Safari 5.1-6 */
+   /* background-image: linear-gradient(to left, #141e30, #243b55);  /* Chrome 10-25, Safari 5.1-6 */
     /*width: 1405px;*/
-    width: auto;
+    background-color: #141e30;
+    width: 100%;
     height: 500px;
+    overflow:hidden
 }
 
 header{
@@ -40,9 +42,9 @@ header{
 }
 #asideRight{
     width: 500px;
-    height: 640px;
+    height:400px;
     background-color: none;
-    overflow: scroll;
+    /*overflow: scroll;*/
     padding-top: 50px;
     padding-bottom: 70px;
     margin-right: -25px;
@@ -54,7 +56,7 @@ header{
     background-color: none;
     color: #ffffff;
     padding-top: 15px;
-    padding-left: 15px;
+    padding-left: 50px;
     margin: 10px;
     /*text-align: justify;*/   
 }
@@ -76,16 +78,18 @@ header{
     text-decoration: none rgb(255, 255, 255); color: white;
 }
 #asideLeft{
-    width: 1090px;
-    height: 700px;
+    width: 550px;
+    height: 550px;
+    padding-top: 50px;
+    padding-left: 20px;
 }
 #articleLeft{
-    width: 400px;
+    width: 300px;
     height: 340px;
     text-align: center;
     margin: 10px;
-    padding-top: 100px;
-    padding-left: 0px;
+    padding-top: 150px;
+    padding-left: 20px;
     float: left;
 }
 /*#divLeft{
