--- a/CSS.css
+++ b/CSS.css
@@ -1,10 +1,9 @@
 body{
    /* background-image: linear-gradient(to left, #141e30, #243b55);  /* Chrome 10-25, Safari 5.1-6 */
     /*width: 1405px;*/
-    background-color: #141e30;
+    background-color: #243b55;
     width: 100%;
     height: 500px;
-    overflow:hidden
 }
 
 header{
@@ -42,12 +41,12 @@ header{
 }
 #asideRight{
     width: 500px;
-    height:400px;
+    height:480px;
     background-color: none;
     /*overflow: scroll;*/
     padding-top: 50px;
     padding-bottom: 70px;
-    margin-right: -25px;
+    margin-right: px;
     float: right;
 }
 #articleRight{
@@ -78,7 +77,7 @@ header{
     text-decoration: none rgb(255, 255, 255); color: white;
 }
 #asideLeft{
-    width: 550px;
+    width: 450px;
     height: 550px;
     padding-top: 50px;
     padding-left: 20px;
@@ -88,8 +87,8 @@ header{
     height: 340px;
     text-align: center;
     margin: 10px;
-    padding-top: 150px;
-    padding-left: 20px;
+    padding-top: 80px;
+    padding-left: 50px;
     float: left;
 }
 /*#divLeft{
@@ -103,7 +102,8 @@ header{
 #code{
     width: 120px;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-left: 135px;
     border: 3px solid white;
 }
 #code:hover{
